update project 17/06/2026
